Actualización de Institucional, con tarjetas y carrousel

--- a/institucional.html
+++ b/institucional.html
@@ -29,44 +29,174 @@
   </div>
 </header>
 
-<main>   
+<!-- Main -->
+<main class="container-fluid">
 
- <h2>Comprometidos con tu salud</h2>
-    <img src="https://img.freepik.com/foto-gratis/doctor-examinando-mano-paciente_23-2148285670.jpg?semt=ais_hybrid&w=740&q=80" class="img-institucional" alt="Imagen de médico cuidando de paciente">
-    <p>La Clínica IDW es un centro de atención privada que ofrece servicios de cuidado integral, enfocado en el tratamiento de patologías clínico-quirúrgicas frecuentes, siempre con prioridad en la salud y bienestar del paciente.</p>
-    <p>Trabajamos para fomentar una cultura basada en valores esenciales: atención centrada en el paciente y su familia, gestión del conocimiento, y seguridad y bienestar de pacientes y profesionales de la salud.</p>
-
-    <h2>Nuestra Historia</h2>
-    <img src="https://mx.habcdn.com/photos/project/medium/entrada-consultorios-395801.jpg" class="img-institucional" alt="Foto de la clínica por dentro">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-    <h2>Equipo Directivo y Autoridades</h2>
-    <img src="https://st2.depositphotos.com/1008450/11470/i/450/depositphotos_114704178-stock-photo-doctors-and-businessman.jpg" class="img-institucional" alt="Equipo directivo de la clínica">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-    <h2>Política de Calidad</h2>
-    <div class="calidad">
-      <ul>
-        <li>Atención centrada en el paciente y su familia</li>
-        <li>Gestión del conocimiento</li>
-        <li>Seguridad y bienestar de pacientes y profesionales</li>
-      </ul>
+  <!-- Compromiso -->
+  <section class="row align-items-center mb-5">
+    <div class="col-lg-6">
+      <img src="CSS/imagenes/institucional 1 compromiso.jpg"
+     class="img-fluid rounded img-institucional" alt="Imagen de médica cuidando de paciente">
     </div>
+    <div class="col-lg-6">
+      <h2>Comprometidos con tu salud</h2>
+      <p>La Clínica IDW es un centro de atención privada que ofrece servicios de cuidado integral, enfocado en el tratamiento de patologías clínico-quirúrgicas frecuentes, siempre con prioridad en la salud y bienestar del paciente.</p>
+      <p>Trabajamos para fomentar una cultura basada en valores esenciales: atención centrada en el paciente y su familia, gestión del conocimiento, y seguridad y bienestar de pacientes y profesionales de la salud.</p>
+    </div>
+  </section>
 
-    <h2>Código de Ética</h2>
-    <img src="https://www.flowww.es/hubfs/Q22024%20Mayo/Blog/etica-medica-flowww.webp" class="img-institucional" alt="Imagen representando ética médica">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  </main>
+  <!-- Historia -->
+  <section class="row align-items-center mb-5 flex-lg-row-reverse">
+    <div class="col-lg-6">
+      <img src="CSS/imagenes/institucional 2 nuestra historia.jpg"
+          class="img-fluid rounded img-institucional" alt="Foto de la clínica por dentro">
+    </div>
+    <div class="col-lg-6">
+      <h2>Nuestra Historia</h2>
+      <p>Desde nuestros inicios, nos hemos dedicado a brindar atención médica de calidad, poniendo siempre al paciente en el centro de nuestro trabajo. A lo largo de los años, hemos crecido y evolucionado, incorporando tecnología, ampliando nuestros servicios y formando un equipo comprometido con la excelencia en salud. Cada paso de nuestra historia refleja nuestro esfuerzo por ofrecer un cuidado seguro, humano y de vanguardia.</p>
+    </div>
+  </section>
+
+  <!-- Equipo -->
+  <section class="row align-items-center mb-5">
+    <div class="col-lg-6">
+      <img src="CSS/imagenes/institucional 3 Equipo directivo y autoridades.jpg"
+          class="img-fluid rounded img-institucional" alt="Equipo directivo de la clínica">
+    </div>
+    <div class="col-lg-6">
+      <h2>Equipo Directivo y Autoridades</h2>
+      <p>Nuestro equipo directivo combina experiencia profesional, liderazgo y compromiso con la excelencia en salud. Cada uno de nuestros integrantes trabaja para garantizar una gestión eficiente, fomentar la innovación en atención médica y asegurar que nuestros pacientes reciban un servicio de calidad, seguro y humano.</p>
+    </div>
+  </section>
+
+  <!-- Código de ética -->
+  <section class="row align-items-center mb-5 flex-lg-row-reverse">
+    <div class="col-lg-6">
+      <img src="CSS/imagenes/institucional 4 codigo de etica.jpg"
+          class="img-fluid rounded img-institucional" alt="Imagen representando ética médica">
+    </div>
+    <div class="col-lg-6">
+      <h2>Código de Ética</h2>
+      <p>Nuestro compromiso ético se refleja en cada acción que realizamos. Respetamos la dignidad y privacidad de nuestros pacientes, actuamos con honestidad e integridad en todas nuestras prácticas y promovemos un ambiente de respeto y profesionalismo. Cada decisión médica y administrativa se toma considerando el bienestar del paciente como prioridad, asegurando transparencia, confidencialidad y calidad en la atención.</p>
+    </div>
+  </section>
+
+  <section class="my-5">
+  <div class="container text-center">
+    <h2 class="mb-4">Política de Calidad</h2>
+    <div class="row justify-content-center g-4">
+
+      <!-- Carta 1 -->
+      <div class="col-md-4">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front" style="background-color: #007bb5;">
+              <h5 class="text-white">Atención centrada en el paciente y su familia</h5>
+            </div>
+            <div class="flip-card-back" style="background-color: #ffffff;">
+              <p class="text-dark">Nos enfocamos en brindar cuidado integral, respetando la individualidad de cada paciente y su familia.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Carta 2 -->
+      <div class="col-md-4">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front" style="background-color: #007bb5;">
+              <h5 class="text-white">Gestión del conocimiento</h5>
+            </div>
+            <div class="flip-card-back" style="background-color: #ffffff;">
+              <p class="text-dark">Fomentamos la capacitación continua y el intercambio de información para mejorar nuestros procesos y servicios.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Carta 3 -->
+      <div class="col-md-4">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front" style="background-color: #007bb5;">
+              <h5 class="text-white">Seguridad y bienestar de pacientes y profesionales</h5>
+            </div>
+            <div class="flip-card-back" style="background-color: #ffffff;">
+              <p class="text-dark">Garantizamos la seguridad y el bienestar de todos mediante protocolos rigurosos y estándares de calidad.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
   
+  <!-- Carrusel de instalaciones -->
+<section class="mb-5">
+  <h2 class="text-center mb-4">Nuestras Instalaciones</h2>
+  <div class="container"> 
+    <div id="carruselInstalaciones" class="carousel slide" data-bs-ride="carousel">
+      
+      <!-- Imágenes -->
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="CSS/imagenes/Institucional Carrousel 1 Pasillo.jpg" class="d-block w-100" alt="Pasillo de Entrada de Clínica IDW">
+          </div>
+          <div class="carousel-item">
+            <img src="CSS/imagenes/Institucional Carrousel 2 Consultorio.jpg" class="d-block w-100" alt="Consultorio de Clínica IDW">
+          </div>
+          <div class="carousel-item">
+            <img src="CSS/imagenes/Institucional Carrousel 3 Sala de Espera.jpg" class="d-block w-100" alt="Sala de Espera de Clínica IDW">
+          </div>
+          <div class="carousel-item">
+            <img src="CSS/imagenes/Institucional Carrousel 4 Sala de Operaciones.jpg" class="d-block w-100" alt="Sala de Operaciones de Clínica IDW">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
+      </div>
+
+      <!-- Botones -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#carruselInstalaciones" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carruselInstalaciones" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </div>
+  </div>
+</section>
+
+</main>
+
+<!-- Footer -->
 <footer>
-    <a href="https://www.instagram.com">Instagram</a>
-    <a href="https://www.facebook.com">Facebook</a>
-    <a href="https://www.x.com">Twitter</a>
-    <p>Desarrollado por Grupo 19 &copy;</p>
+  <a href="https://www.instagram.com">Instagram</a> |
+  <a href="https://www.facebook.com">Facebook</a> |
+  <a href="https://www.x.com">X</a>
+  <p>Desarrollado por Grupo 19 &copy;</p>
 </footer>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Click en Flip Cards -->
+
+<script>
+document.querySelectorAll('.flip-card').forEach(card => {
+  card.addEventListener('click', () => {
+    card.querySelector('.flip-card-inner').classList.toggle('flipped');
+  });
+});
+</script>
 
 </body>
 </html>
