--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
 </header>
 
 <main class="container-fluid">
-  <section>
+    <section>
     <h2>Bienestar y Salud</h2>
     <div class="row g-3">
 
       <!-- Card 1 -->
       <div class="col-md-4 d-flex">
         <div class="card shadow-sm flex-fill">
-          <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0" class="card-img-top img-fluid" alt="Turnos online">
+          <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0" 
+              class="card-img-bienestar img-fluid" 
+              alt="Turnos online">
           <div class="card-body text-center d-flex flex-column">
             <p class="card-text">Turnos online disponibles de forma rápida y sencilla, con confirmación inmediata en tu dispositivo.</p>
             <div class="d-flex justify-content-center">
@@ -53,7 +55,9 @@
       <!-- Card 2 -->
       <div class="col-md-4 d-flex">
         <div class="card shadow-sm flex-fill">
-          <img src="https://images.unsplash.com/photo-1599045118108-bf9954418b76?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0" class="card-img-top img-fluid" alt="Investigación">
+          <img src="https://images.unsplash.com/photo-1599045118108-bf9954418b76?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0" 
+              class="card-img-bienestar img-fluid" 
+              alt="Investigación">
           <div class="card-body text-center d-flex flex-column">
             <p class="card-text">Investigación constante para mejorar la salud de nuestros pacientes.</p>
             <div class="d-flex justify-content-center">
@@ -69,7 +73,9 @@
       <!-- Card 3 -->
       <div class="col-md-4 d-flex">
         <div class="card shadow-sm flex-fill">
-          <img src="https://images.unsplash.com/photo-1581056771107-24ca5f033842?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0" class="card-img-top img-fluid" alt="Paciente">
+          <img src="https://images.unsplash.com/photo-1581056771107-24ca5f033842?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0" 
+              class="card-img-bienestar img-fluid" 
+              alt="Paciente">
           <div class="card-body text-center d-flex flex-column">
             <p class="card-text">Atención personalizada y cuidado integral del paciente.</p>
             <div class="d-flex justify-content-center">
@@ -87,10 +93,11 @@
   </section>
 
 <!-- NUEVA SECCIÓN: Catálogo de Profesionales -->
+<section>
+<h2 class="text-center mb-4">Nuestro Equipo Profesional</h2>
 <section class="my-5">
-  <div class="container-fluid px-4"> <!-- 👈 Limita el ancho -->
-    <h2 class="text-center mb-4">Nuestro Equipo Profesional</h2>
-    <div class="row g-4 justify-content-center">
+   <div class="container-fluid px-4"> <!-- 👈 Limita el ancho -->
+      <div class="row g-4 justify-content-center">
 
       <!-- Profesional 1 -->
       <div class="col-md-4">
