--- a/institucional.html
+++ b/institucional.html
@@ -81,56 +81,52 @@
     </div>
   </section>
 
-  <section class="my-5">
-  <div class="container text-center">
-    <h2 class="mb-4">Política de Calidad</h2>
-    <div class="row justify-content-center g-4">
+   <section class="my-5">
+    <div class="container text-center">
+      <h2 class="mb-4">Política de Calidad</h2>
+      <div class="row justify-content-center g-4">
 
-      <!-- Carta 1 -->
-      <div class="col-md-4">
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front" style="background-color: #007bb5;">
-              <h5 class="text-white">Atención centrada en el paciente y su familia</h5>
-            </div>
-            <div class="flip-card-back" style="background-color: #ffffff;">
-              <p class="text-dark">Nos enfocamos en brindar cuidado integral, respetando la individualidad de cada paciente y su familia.</p>
+        <div class="col-md-4">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front" style="background-color: #007bb5;">
+                <h5 class="text-white">Atención centrada en el paciente y su familia</h5>
+              </div>
+              <div class="flip-card-back" style="background-color: #eaeaea;">
+                <p class="text-dark">Nos enfocamos en brindar cuidado integral, respetando la individualidad de cada paciente y su familia.</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Carta 2 -->
-      <div class="col-md-4">
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front" style="background-color: #007bb5;">
-              <h5 class="text-white">Gestión del conocimiento</h5>
-            </div>
-            <div class="flip-card-back" style="background-color: #ffffff;">
-              <p class="text-dark">Fomentamos la capacitación continua y el intercambio de información para mejorar nuestros procesos y servicios.</p>
+        <div class="col-md-4">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front" style="background-color: #007bb5;">
+                <h5 class="text-white">Gestión del conocimiento</h5>
+              </div>
+              <div class="flip-card-back" style="background-color: #eaeaea;">
+                <p class="text-dark">Fomentamos la capacitación continua y el intercambio de información para mejorar nuestros procesos y servicios.</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Carta 3 -->
-      <div class="col-md-4">
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front" style="background-color: #007bb5;">
-              <h5 class="text-white">Seguridad y bienestar de pacientes y profesionales</h5>
-            </div>
-            <div class="flip-card-back" style="background-color: #ffffff;">
-              <p class="text-dark">Garantizamos la seguridad y el bienestar de todos mediante protocolos rigurosos y estándares de calidad.</p>
+        <div class="col-md-4">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front" style="background-color: #007bb5;">
+                <h5 class="text-white">Seguridad y bienestar de pacientes y profesionales</h5>
+              </div>
+              <div class="flip-card-back" style="background-color: #eaeaea;">
+                <p class="text-dark">Garantizamos la seguridad y el bienestar de todos mediante protocolos rigurosos y estándares de calidad.</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-    </div>
-  </div>
-</section>
+      </div>
+    </section>
   
   <!-- Carrusel de instalaciones -->
 <section class="mb-5">
@@ -189,14 +185,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Click en Flip Cards -->
-
-<script>
-document.querySelectorAll('.flip-card').forEach(card => {
-  card.addEventListener('click', () => {
-    card.querySelector('.flip-card-inner').classList.toggle('flipped');
-  });
-});
-</script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
