--- a/institucional.html
+++ b/institucional.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Institucional</title>
+  <link rel="icon" type="image/png" href="./CSS/imagenes/IDW_S.A1-removebg-preview.png">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="CSS/styles.css">
+</head>html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +23,7 @@
 <header>
   <div class="d-flex justify-content-between align-items-center w-100 px-3">
     <a href="index.html">
-      <img src="./CSS/imagenes/Logo ejemplo.jpeg" alt="Logo Clinica IDW" style="height: 50px;">
+      <img src="./CSS/imagenes/IDW_S.A1-removebg-preview.png" alt="Logo Clinica IDW" style="height: 50px;">
     </a>
     <h1 class="mb-0 position-absolute start-50 translate-middle-x text-center">Bienvenido a la Clinica IDW</h1>
     <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
