--- a/altaMedicos.html
+++ b/altaMedicos.html
@@ -26,7 +26,7 @@
 </footer>
 
 <!-- Scripts -->
-<script type="module" src="altaMedicos.js"></script>
+<script type="module" src="js/altaMedicos.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
