--- a/altaMedicos.html
+++ b/altaMedicos.html
@@ -18,6 +18,32 @@
 
 <body>
 
+<header>
+  <div class="d-flex justify-content-between align-items-center w-100 px-3">
+    <a href="index.html">
+      <img src="./CSS/imagenes/IDW_S.A1-removebg-preview.png" alt="Logo Clinica IDW" style="height: 50px;">
+    </a>
+    <h1 class="mb-0 position-absolute start-50 translate-middle-x text-center">Bienvenido a la Clínica IDW</h1>
+    <div class="d-flex align-items-center gap-2">
+      <button id="darkModeToggle" class="btn btn-outline-light btn-sm" type="button" title="Cambiar modo oscuro">
+        <i class="bi bi-moon-fill" id="darkModeIcon"></i>
+      </button>
+      <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
+
+  <div class="collapse navbar-collapse d-lg-block w-100" id="navbarNav">
+    <nav class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 py-2">
+      <a href="index.html" class="nav-link">Inicio</a>
+      <a href="institucional.html" class="nav-link">Institucional</a>
+      <a href="contacto.html" class="nav-link">Contacto</a>
+      <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
+    </nav>
+  </div>
+</header>
+
 <footer class="text-center py-3">
   <a href="https://www.instagram.com">Instagram</a> |
   <a href="https://www.facebook.com">Facebook</a> |
