altaMedicos.js actualizado

--- a/altaMedicos.html
+++ b/altaMedicos.html
@@ -15,7 +15,6 @@
   <!-- CSS personalizado -->
   <link rel="stylesheet" href="CSS/styles.css">
 </head>
-
 <body>
 
 <header>
@@ -105,7 +104,7 @@
 </footer>
 
 <!-- Scripts -->
-<script type="module" src="js/altaMedicos.js"></script>
+<script type="module" src="altaMedicos.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
