--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,8 @@
       <a href="index.html" class="nav-link">Inicio</a>
       <a href="institucional.html" class="nav-link">Institucional</a>
       <a href="contacto.html" class="nav-link">Contacto</a>
-    </nav>
+      <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
+  </nav>
   </div>
 </header>
 
