--- a/institucional.html
+++ b/institucional.html
@@ -45,6 +45,7 @@
       <a href="index.html" class="nav-link">Inicio</a>
       <a href="institucional.html" class="nav-link">Institucional</a>
       <a href="contacto.html" class="nav-link">Contacto</a>
+      <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
     </nav>
   </div>
 </header>
