--- a/contacto.html
+++ b/contacto.html
@@ -53,6 +53,7 @@
     <p class="text-center mb-4">Envíanos tu consulta, comentario y/o sugerencia completando el siguiente formulario. Estamos aquí para ayudarte y responder todas tus inquietudes de manera rápida y eficaz.</p>
 
     <!-- Formulario de contacto -->
+    <form id="formContacto">
     <div class="row justify-content-center mb-5">
       <div class="col-md-12">
         <div class="card p-4 shadow-sm">
@@ -93,6 +94,8 @@
       </div>
     </div>
   </section>
+  </form>
+
 
   <section class="text-center mb-4">
   <div class="container">
