--- a/institucional.html
+++ b/institucional.html
@@ -102,6 +102,8 @@
     </div>
   </section>
 
+    <!-- Política de calidad -->
+
    <section class="my-5">
     <div class="container text-center">
       <h2 class="mb-4">Política de Calidad</h2>
@@ -110,24 +112,11 @@
         <div class="col-md-4">
           <div class="flip-card">
             <div class="flip-card-inner">
-              <div class="flip-card-front" style="background-color: #007bb5;">
-                <h5 class="text-white">Atención centrada en el paciente y su familia</h5>
+              <div class="flip-card-front institucional-card">
+                <h5 class="text">Atención centrada en el paciente y su familia</h5>
               </div>
-              <div class="flip-card-back" style="background-color: #eaeaea;">
-                <p class="text-dark">Nos enfocamos en brindar cuidado integral, respetando la individualidad de cada paciente y su familia.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front" style="background-color: #007bb5;">
-                <h5 class="text-white">Gestión del conocimiento</h5>
-              </div>
-              <div class="flip-card-back" style="background-color: #eaeaea;">
-                <p class="text-dark">Fomentamos la capacitación continua y el intercambio de información para mejorar nuestros procesos y servicios.</p>
+              <div class="flip-card-back">
+                <p class="text">Nos enfocamos en brindar cuidado integral, respetando la individualidad de cada paciente y su familia.</p>
               </div>
             </div>
           </div>
@@ -136,11 +125,24 @@
         <div class="col-md-4">
           <div class="flip-card">
             <div class="flip-card-inner">
-              <div class="flip-card-front" style="background-color: #007bb5;">
-                <h5 class="text-white">Seguridad y bienestar de pacientes y profesionales</h5>
+              <div class="flip-card-front institucional-card">
+                <h5 class="text">Gestión del conocimiento</h5>
               </div>
-              <div class="flip-card-back" style="background-color: #eaeaea;">
-                <p class="text-dark">Garantizamos la seguridad y el bienestar de todos mediante protocolos rigurosos y estándares de calidad.</p>
+              <div class="flip-card-back">
+                <p class="text">Fomentamos la capacitación continua y el intercambio de información para mejorar nuestros procesos y servicios.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front institucional-card">
+                <h5 class="text">Seguridad y bienestar de pacientes y profesionales</h5>
+              </div>
+              <div class="flip-card-back">
+                <p class="text">Garantizamos la seguridad y el bienestar de todos mediante protocolos rigurosos y estándares de calidad.</p>
               </div>
             </div>
           </div>
