--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="CSS/styles.css">
 </head>
-<body>
+<body class="index">
 
 <header>
   <div class="d-flex justify-content-between align-items-center w-100 px-3">
@@ -42,6 +42,9 @@
 </header>
 
 <main class="container-fluid">
+
+  <!-- Sección Bienestar y Salud -->
+<main class="container-fluid">
     <section>
     <h2>Bienestar y Salud</h2>
     <div class="row g-3">
@@ -50,12 +53,12 @@
       <div class="col-md-4 d-flex">
         <div class="card shadow-sm flex-fill">
           <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0" 
-              class="card-img-bienestar img-fluid" 
-              alt="Turnos online">
+               class="card-img-bienestar img-fluid" 
+               alt="Turnos online">
           <div class="card-body text-center d-flex flex-column">
-            <p class="card-text">Turnos online disponibles de forma rápida y sencilla, con confirmación inmediata en tu dispositivo.</p>
+            <p class="card-text">Turnos online disponibles de forma rápida y sencilla.</p>
             <div class="d-flex justify-content-center">
-              <button class="btn btn-sm-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">Ver más</button>
+              <button class="btn btn-sm btn-sm-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">Ver más</button>
             </div>
             <div class="collapse mt-2" id="collapse1">
               <p>Gestioná tus turnos en línea en cualquier momento y mantené todo bajo control sin esperas.</p>
@@ -68,12 +71,12 @@
       <div class="col-md-4 d-flex">
         <div class="card shadow-sm flex-fill">
           <img src="https://images.unsplash.com/photo-1599045118108-bf9954418b76?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0" 
-              class="card-img-bienestar img-fluid" 
-              alt="Investigación">
+               class="card-img-bienestar img-fluid" 
+               alt="Investigación">
           <div class="card-body text-center d-flex flex-column">
             <p class="card-text">Investigación constante para mejorar la salud de nuestros pacientes.</p>
             <div class="d-flex justify-content-center">
-              <button class="btn btn-sm-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">Ver más</button>
+              <button class="btn btn-sm btn-sm-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">Ver más</button>
             </div>
             <div class="collapse mt-2" id="collapse2">
               <p>Nuestro equipo trabaja en proyectos innovadores y estudios clínicos para ofrecer tratamientos avanzados.</p>
@@ -86,12 +89,12 @@
       <div class="col-md-4 d-flex">
         <div class="card shadow-sm flex-fill">
           <img src="https://images.unsplash.com/photo-1581056771107-24ca5f033842?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0" 
-              class="card-img-bienestar img-fluid" 
-              alt="Paciente">
+               class="card-img-bienestar img-fluid" 
+               alt="Paciente">
           <div class="card-body text-center d-flex flex-column">
             <p class="card-text">Atención personalizada y cuidado integral del paciente.</p>
             <div class="d-flex justify-content-center">
-              <button class="btn btn-sm-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">Ver más</button>
+              <button class="btn btn-sm btn-sm-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">Ver más</button>
             </div>
             <div class="collapse mt-2" id="collapse3">
               <p>Nuestros profesionales acompañan a cada paciente para brindar la mejor experiencia médica posible.</p>
@@ -102,88 +105,22 @@
 
     </div>
   </section>
-  </section>
 
-<!-- NUEVA SECCIÓN: Catálogo de Profesionales -->
-<section>
+  <!-- Sección Nuestro Equipo Profesional -->
+  <section>
 <h2 class="text-center mb-4">Nuestro Equipo Profesional</h2>
 <section class="my-5">
    <div class="container-fluid px-4"> <!-- 👈 Limita el ancho -->
-      <div class="row g-4 justify-content-center">
 
-      <!-- Profesional 1 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="CSS/imagenes/doctora3.jpg" class="card-img-top" alt="Dra. María Gómez">
-          <div class="card-body text-center">
-            <h5 class="card-title">Dra. María Gómez</h5>
-            <p class="card-text">Pediatra</p>
-          </div>
-        </div>
+      <div class="row g-4 justify-content-center" id="catalogoProfesionales">
+        <!-- Las cards de médicos se insertarán dinámicamente desde JS -->
       </div>
-
-      <!-- Profesional 2 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="CSS/imagenes/doctora5.jpg" class="card-img-top" alt="Dra. Juana Pereira
-          ">
-          <div class="card-body text-center">
-            <h5 class="card-title">Dra. Juana Pereira</h5>
-            <p class="card-text">Cardióloga</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Profesional 3 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="CSS/imagenes/doctor1.jpg" class="card-img-top" alt="Dr. Ricardo López">
-          <div class="card-body text-center">
-            <h5 class="card-title">Dr. Ricardo López</h5>
-            <p class="card-text">Traumatólogo</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Profesional 4 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="CSS/imagenes/doctor2.png" class="card-img-top" alt="Dr. Francisco Cespedes">
-          <div class="card-body text-center">
-            <h5 class="card-title">Dr. Francisco Cespedes</h5>
-            <p class="card-text">Ginecologo</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Profesional 5 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="CSS/imagenes/doctora6.jpg" class="card-img-top" alt="Dra. Camila Lopetegui">
-          <div class="card-body text-center">
-            <h5 class="card-title">Dra. Camila Lopetegui</h5>
-            <p class="card-text">Otorrinolaringologa</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Profesional 6 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="CSS/imagenes/doctor4.jpg" class="card-img-top" alt="Dr. Pablo Jimenez ">
-          <div class="card-body text-center">
-            <h5 class="card-title">Dr. Pablo Jimenez</h5>
-            <p class="card-text">Clínico</p>
-          </div>
-        </div>
-      </div>
-
     </div>
-  </div>
-</section>
+  </section>
+
 </main>
 
-<footer>
+<footer class="text-center py-3">
   <a href="https://www.instagram.com">Instagram</a> |
   <a href="https://www.facebook.com">Facebook</a> |
   <a href="https://www.x.com">X</a>
@@ -192,8 +129,11 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <!-- App JS -->
-<script src="js/app.js"></script>
+<script type="module" src="js/catalogoProfesionales.js"></script>
+<script type="module" src="js/app.js"></script>
+
 
 </body>
 </html>
