--- a/altaMedicos.html
+++ b/altaMedicos.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alta de Médicos</title>
 
+
   <!-- Icono de navegador -->
   <link rel="icon" type="image/png" href="./CSS/imagenes/IDW_S.A1-removebg-preview.png">
 
@@ -30,6 +31,15 @@
       <button class="navbar-toggler navbar-dark d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <button class="btn btn-outline-danger btn-sm" onclick="logout()">Cerrar sesión</button>
+      
+      <script>
+        function logout() {
+          localStorage.removeItem("logueado");
+          window.location.href = "login.html";
+        }
+      </script>
+
     </div>
   </div>
 
@@ -208,5 +218,22 @@
 
 <script type="module" src="js/altaMedicos.js"></script>
 <script src="js/app.js"></script>
+
+<!-- Verificación de login -->
+<script>
+  if (localStorage.getItem("logueado") !== "true") {
+    window.location.href = "login.html";
+  }
+</script>
+
+<!-- Función logout -->
+<script>
+  function logout() {
+    localStorage.removeItem("logueado");
+    window.location.href = "index.html";
+  }
+</script>
+
+
 </body>
 </html>
