--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 <!-- App JS -->
 <script type="module" src="js/catalogoProfesionales.js"></script>
 <script type="module" src="js/app.js"></script>
+<script>
+  localStorage.removeItem("logueado");
+</script>
 
 
 </body>
