--- a/altaMedicos.html
+++ b/altaMedicos.html
@@ -216,6 +216,9 @@
   <p class="mb-0">Desarrollado por Grupo 19 &copy;</p>
 </footer>
 
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <script type="module" src="js/altaMedicos.js"></script>
 <script src="js/app.js"></script>
 
