--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <a href="institucional.html" class="nav-link">Institucional</a>
       <a href="contacto.html" class="nav-link">Contacto</a>
       <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
+      <a href="reservarTurno.html" class="nav-link">Reservar turno</a>
     </nav>
   </div>
 </header>
