Subida limpia desde main para GitHub Pages

--- a/altaMedicos.html
+++ b/altaMedicos.html
@@ -53,6 +53,7 @@
       <a href="institucional.html" class="nav-link">Institucional</a>
       <a href="contacto.html" class="nav-link">Contacto</a>
       <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
+      <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
       
       <!-- Botones dentro del menú hamburguesa (solo móvil/tablet) -->
       <div class="d-lg-none w-100 d-flex flex-column gap-2 mt-2 px-3">
