--- a/institucional.html
+++ b/institucional.html
@@ -46,6 +46,7 @@
       <a href="institucional.html" class="nav-link">Institucional</a>
       <a href="contacto.html" class="nav-link">Contacto</a>
       <a href="altaMedicos.html" class="nav-link">Alta de Médicos</a>
+      <a href="reservarTurno.html" class="nav-link">Reservar Turno</a>
     </nav>
   </div>
 </header>
